// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/SuiteHeader/SuiteHeaderAppSwitcher Loading state 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "background": "white",
        "width": "15rem",
      }
    }
  >
    <ul
      className="iot--suite-header-app-switcher"
      data-testid="suite-header-app-switcher"
    >
      <li
        className="iot--suite-header-app-switcher--nav-link"
      >
        <p>
          My applications
        </p>
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--tertiary"
          data-testid="suite-header-app-switcher--all-applications"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={-1}
          type="button"
        >
          All applications
          <svg
            aria-hidden={true}
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.3 3.7L13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
            />
          </svg>
        </button>
      </li>
      <div
        className="iot--suite-header-app-switcher--nav-link--separator"
      />
      <li>
        <div
          className="iot--suite-header-app-switcher--nav-link--loading"
          data-testid="suite-header-app-switcher--loading"
        >
          <div>
            <p
              className="bx--skeleton__text"
              style={
                Object {
                  "width": "calc(100% - 73px)",
                }
              }
            />
            <p
              className="bx--skeleton__text"
              style={
                Object {
                  "width": "calc(100% - 11px)",
                }
              }
            />
            <p
              className="bx--skeleton__text"
              style={
                Object {
                  "width": "calc(100% - 43px)",
                }
              }
            />
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/SuiteHeader/SuiteHeaderAppSwitcher No applications 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "background": "white",
        "width": "15rem",
      }
    }
  >
    <ul
      className="iot--suite-header-app-switcher"
      data-testid="suite-header-app-switcher"
    >
      <li
        className="iot--suite-header-app-switcher--nav-link"
      >
        <p>
          My applications
        </p>
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--tertiary"
          data-testid="suite-header-app-switcher--all-applications"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={-1}
          type="button"
        >
          All applications
          <svg
            aria-hidden={true}
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.3 3.7L13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
            />
          </svg>
        </button>
      </li>
      <div
        className="iot--suite-header-app-switcher--nav-link--separator"
      />
      <div
        className="iot--suite-header-app-switcher--no-app"
      >
        <div
          className="bee-icon-container"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={32}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 10a6 6 0 00-6 6v8a6 6 0 0012 0V16A6 6 0 0016 10zm-4.25 7.87h8.5v4.25h-8.5zM16 28.25A4.27 4.27 0 0111.75 24v-.13h8.5V24A4.27 4.27 0 0116 28.25zm4.25-12.13h-8.5V16a4.25 4.25 0 018.5 0zM30.66 19.21L24 13v9.1a4 4 0 008 0A3.83 3.83 0 0030.66 19.21zM28 24.35a2.25 2.25 0 01-2.25-2.25V17l3.72 3.47h0A2.05 2.05 0 0130.2 22 2.25 2.25 0 0128 24.35zM0 22.1a4 4 0 008 0V13L1.34 19.21A3.88 3.88 0 000 22.1zm2.48-1.56h0L6.25 17v5.1a2.25 2.25 0 01-4.5 0A2.05 2.05 0 012.48 20.54zM15 5.5A3.5 3.5 0 1011.5 9 3.5 3.5 0 0015 5.5zm-5.25 0A1.75 1.75 0 1111.5 7.25 1.77 1.77 0 019.75 5.5zM20.5 2A3.5 3.5 0 1024 5.5 3.5 3.5 0 0020.5 2zm0 5.25A1.75 1.75 0 1122.25 5.5 1.77 1.77 0 0120.5 7.25z"
            />
          </svg>
          <div
            className="bee-shadow"
          />
        </div>
        <span>
          Contact your administrator to request application access.
        </span>
        <a
          data-testid="suite-header-app-switcher--no-access"
          href="#"
          onClick={[Function]}
          tabIndex={-1}
        >
          Learn more
        </a>
      </div>
    </ul>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/SuiteHeader/SuiteHeaderAppSwitcher default 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "background": "white",
        "width": "15rem",
      }
    }
  >
    <ul
      className="iot--suite-header-app-switcher"
      data-testid="suite-header-app-switcher"
    >
      <li
        className="iot--suite-header-app-switcher--nav-link"
      >
        <p>
          My applications
        </p>
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--tertiary"
          data-testid="suite-header-app-switcher--all-applications"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={-1}
          type="button"
        >
          All applications
          <svg
            aria-hidden={true}
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={16}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.3 3.7L13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
            />
          </svg>
        </button>
      </li>
      <div
        className="iot--suite-header-app-switcher--nav-link--separator"
      />
      <li
        className="iot--suite-header-app-switcher--app-link"
        id="suite-header-application-monitor"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="suite-header-app-switcher--monitor"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={-1}
          type="button"
        >
          Monitor
        </button>
      </li>
      <li
        className="iot--suite-header-app-switcher--app-link"
        id="suite-header-application-health"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="suite-header-app-switcher--health"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={-1}
          type="button"
        >
          Health
        </button>
      </li>
    </ul>
  </div>
</div>
`;
